[tool.poetry]
name = "pythonDrill"
version = "0.1.0"
description = ""
authors = ["yuriacats"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.2.1"
mecab-python3 = "^1.0.8"
unidic-lite = "^1.0.8"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true

[tool.ruff]
lint.select = [
  "ALL"
]
lint.ignore = [
  "D211", # 行数に関するD203と矛盾したルール
  "D213", # 行数に関するD212と矛盾したルール
  "D100", # アルゴリズム確認のためDocstringは無効 
  "D103", # アルゴリズム確認のためDocstringは無効 
  "T201"  #アルゴリズムの確認のためのものなのでprint関数の使用を許容する 
]
